# system-monitor-mcp

./: .gitignore  LICENSE  README.md  pyproject.toml
src/system_monitor_mcp/: __init__.py  app.py  apps.py  desktop.py  helpers.py  monitor.py  server.py  windows.py
