[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "system-monitor-mcp"
version = "1.0.0"
description = "MCP server for real-time system monitoring — CPU, RAM, disk, network, and process management"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    {name = "Mikhail"}
]
keywords = ["mcp", "system-monitor", "processes", "cpu", "ram", "claude"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Topic :: System :: Monitoring",
]
dependencies = [
    "mcp>=1.0.0",
    "psutil>=5.9.0",
]

[project.scripts]
system-monitor-mcp = "system_monitor_mcp.server:main"

[tool.setuptools.packages.find]
where = ["src"]
